--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,5 +47,18 @@
 <div id="loading" *ngIf="loading">
   <img src="images/loading.gif" id="loading_gif"/>
 </div>
+<!--
+<div class="messages">
+  <p class="alert alert-info" *ngIf="info.length>0">{{info}}</p>
+  <p class="alert alert-success" *ngIf="success.length>0">{{success}}</p>
+  <p class="alert alert-danger" *ngIf="error.length>0">{{error}}</p>
+  <div class="alert alert-success alert-dismissable">
+  <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
+  <strong>Success!</strong> Indicates a successful or positive action.
+</div>
 
+<ngb-alert [type]="danger" >Hello</ngb-alert>
+</div>-->
+
+<simple-notifications [options]="options"></simple-notifications>
 
