--- a/src/app/client-employee/client-employee.component.html
+++ b/src/app/client-employee/client-employee.component.html
@@ -43,7 +43,7 @@
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
         <md-input class="" name="email" #email [(ngModel)]="NewClientEmployee.Email" placeholder="Email" type="email" required maxLength="255"
-            [disabled]="inputDisabled"></md-input>
+            [disabled]="!isNewClientEmployee"></md-input>
     </div>
     <div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
         <md-input class="" name="department" #department [(ngModel)]="NewClientEmployee.Department" placeholder="Department" type="text" required
@@ -54,12 +54,6 @@
     </div>
     <div class="col-md-6 col-sm-12 col-lg-6 col-xs-12 mtop10 center-align">
         <button md-raised-button class="btn-save" [disabled]="inputDisabled">Save</button>
-    </div>
-    <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-        <p *ngIf="error.length>0" class="alert alert-danger">{{error}}</p>
-        <p *ngIf="editSuccess" class="alert alert-success">Client Employee Details are updated successfully!</p>
-        <p *ngIf="editProgress" class="alert alert-info">Please wait...</p>
-
     </div>
 </div>
 </div>
