--- a/src/app/doctor-groups/doctor-groups.component.html
+++ b/src/app/doctor-groups/doctor-groups.component.html
@@ -11,18 +11,12 @@
 				</md-toolbar>
 
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
-						<p *ngIf="Error.length>0" class="alert alert-danger">{{Error}}</p>
-					</div>
-
 					<ul>
 						<li *ngFor="let doctorGroup of DoctorGroups" class="group-list">
 							<a (click)="viewDoctorGroup(doctorGroup)"> {{doctorGroup.Name}}</a>
 						</li>
 					</ul>
-
 				</div>
-
 			</div>
 		</md-card-content>
 	</md-card>
@@ -37,13 +31,9 @@
 				<md-toolbar class="toolbar-small" color="primary">
 					<div class="col-xs-12 p0 m0"><span>Doctor Group</span> <button md-raised-button class="pull-right btn-small" (click)="ViewDoctorGroupModal=!ViewDoctorGroupModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
 				</md-toolbar>
-				<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
-					<p *ngIf="UpdateProgress" class="alert alert-info">"Please wait while fetch doctor group details"</p>
-					<p *ngIf="ModalError.length>0" class="alert alert-danger">{{ModalError}}</p>
-				</div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 p0 bg-white">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 p0">
-					 <h3 class="center-align">{{SelectedGroup.Name }}</h3>
+						<h3 class="center-align">{{SelectedGroup.Name }}</h3>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 col-sm-12">
 						<h3>Doctors</h3>
@@ -79,28 +69,15 @@
 				<md-toolbar class="toolbar-small" color="primary">
 					<div class="col-xs-12 p0 m0"><span>Doctor Group</span> <button md-raised-button class="pull-right btn-small" (click)="AddDoctorGroupModal=!AddDoctorGroupModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
 				</md-toolbar>
-				<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
-					<p *ngIf="UpdateSuccess" class="alert alert-success">Doctor Group has been added sucessfully!</p>
-					<p *ngIf="UpdateFailed" class="alert alert-danger">Error occoured while adding New Doctor Group.</p>
-
-				</div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 p0 bg-white">
-
 					<form (submit)="addDoctorGroup()">
-
 						<div class="col-md-9 col-sm-9 col-lg-9 col-xs-12">
-							<md-input class="" name="groupName" placeholder="Group Name" [(ngModel)]="SelectedGroup.name" type="text" required></md-input>
+							<md-input class="" name="groupName" placeholder="Group Name" [(ngModel)]="SelectedGroup.Name" type="text" required></md-input>
 						</div>
-
-
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-6 center-align">
 							<button md-raised-button class="file-button btn-save" type="submit" value="Submit">Create </button>
 						</div>
-
 					</form>
-
-
-
 				</div>
 			</div>
 		</md-card-content>
