--- a/src/app/doctors/doctors.component.html
+++ b/src/app/doctors/doctors.component.html
@@ -84,17 +84,10 @@
                 <md-toolbar class="mbottom5 toolbar-small" color="primary">
                     <div class="col-xs-12 p0 m0"><span>Templates</span> <button md-raised-button class="pull-right btn-small" (click)="TemplateModal=!TemplateModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
                 </md-toolbar>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
-                        <p *ngIf="UpdateSuccess" class="alert alert-success">Template updated sucessfully!</p>
-                        <p *ngIf="UpdateFailed" class="alert alert-danger">Template not updated!</p>
-                        <p *ngIf="UpdateProgress" class="alert alert-info">Please wait while we upload the file</p>
-                    <p *ngIf="ModalError.length>0" class="alert alert-danger">{{ModalError}}</p>
-                    <p *ngIf="GetTemplateProgress" class="alert alert-info">Please wait while we fetch templales...</p>
-                </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
                     <div class="row p0 m0">
                         <div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-                            <md-input class="" name="name" placeholder="Doctor" [(ngModel)]="SelectedDoctor.Name" type="text" disabled></md-input>
+                            <md-input class="" name="name" placeholder="Doctor" [(ngModel)]="SelectedDoctor.FirstName +' '+SelectedDoctor.LastName" type="text" disabled></md-input>
                         </div>
 
                         <div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
@@ -119,7 +112,7 @@
                     <div class="row p0 m0">
                         <ol *ngIf="Templates.length>0">
                             <li *ngFor="let template of Templates">
-                                <a href={{template.TemplateURL}}> {{template.Name}} </a>
+                                <a (click)="downloadFile(template.TemplateURL)" class="pointer"> {{template.Name}} </a>
                             </li>
                         </ol>
                         <h2 class="center-align" *ngIf="Templates.length==0 && !GetTemplateProgress">No Templates Available</h2>
