--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -34,7 +34,6 @@
 				</md-toolbar>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 mbottom5 ofs" *ngIf="MtVisible">
-				<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 alert alert-danger mbottom5" *ngIf="error.length>0">{{error}}</div>
 				<table>
 					<thead class="orange200">
 						<tr table-header>
@@ -113,7 +112,6 @@
 				</md-toolbar>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 mbottom5 ofs" *ngIf="AqaVisible">
-				<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 alert alert-danger mbottom5" *ngIf="error.length>0">{{error}}</div>
 				<table>
 					<thead class="green200">
 						<tr table-header>
@@ -194,7 +192,6 @@
 				</md-toolbar>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 mbottom5 ofs" *ngIf="QaVisible">
-				<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 alert alert-danger mbottom5" *ngIf="error.length>0">{{error}}</div>
 				<table>
 					<thead class="purple200">
 						<tr table-header>
@@ -256,15 +253,12 @@
 				<md-toolbar class="mbottom5 toolbar-small" color="primary">
 					<div class="col-xs-12 p0 m0"><span>Templates</span> <button md-raised-button class="pull-right btn-small" (click)="TemplateModal=!TemplateModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
 				</md-toolbar>
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<p *ngIf="UpdateProgress" class="alert alert-info">Please wait while we fetch templates...</p>
-				</div>
 				<ol *ngIf="Templates.length>0">
 					<li *ngFor="let template of Templates">
-						<a href={{template.DocumentURL}}> {{template.Name}} </a>
+						<a (click)="downloadFile(template.TemplateURL)" class="pointer"> {{template.Name}} </a>
 					</li>
 				</ol>
-				<h2 class="center-align" *ngIf="Templates.length==0 && !UpdateProgress">No Templates Available</h2>
+				<h2 class="center-align" *ngIf="Templates.length==0">No Templates Available</h2>
 			</div>
 		</md-card-content>
 	</md-card>
@@ -280,7 +274,7 @@
 				</md-toolbar>			
 				<ol *ngIf="SelectedJob.PatientList.length>0">
 					<li *ngFor="let patientList of SelectedJob.PatientList ;let i=index">
-						<a href={{patientList}}> Patient List {{i+1}} </a>
+						<a (click)="downloadFile(patientList)" class="pointer"> Patient List {{i+1}} </a>
 					</li>
 				</ol>
 				<h2 class="center-align" *ngIf="SelectedJob.PatientList.length==0">No patient lists Available</h2>
@@ -298,11 +292,6 @@
 				</md-toolbar>
 				<form (submit)="postJob()" #newDocForm>
 					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
-						<p class="alert alert-success" *ngIf="UpdateSuccess">File Uploaded Successfully.</p>
-						<p class="alert alert-danger" *ngIf="UpdateFailed">File Uploaded Failed.</p>
-						<p class="alert alert-info" *ngIf="UpdateProgress">Please wait while we upload the file..</p>
-						<p class="alert alert-danger" *ngIf="ModalError.length>0">{{ModalError}}</p>
-
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
 							<md-input class="" name="jobNumber" placeholder="Job Number" [(ngModel)]="SelectedJob.JobNumber" type="text" disabled></md-input>
 						</div>
@@ -349,16 +338,12 @@
 				<md-toolbar class="mbottom5 toolbar-small" color="primary">
 					<div class="col-xs-12 p0 m0"><span>Transcript Files</span> <button md-raised-button class="pull-right btn-small" (click)="PartialDownloadModal=!PartialDownloadModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
 				</md-toolbar>
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<p *ngIf="UpdateProgress" class="alert alert-info">Please wait while we fetch the documents...</p>
-					<p *ngIf="error.length>0" class="alert alert-danger"> {{error}} </p>
-				</div>
 				<ol *ngIf="PartialDowloadDocuments.length>0">
 					<li *ngFor="let document of PartialDowloadDocuments">
 						<a (click)="downloadFile(document.DocumentURL)"> {{document.Name}} </a>
 					</li>
 				</ol>
-				<h2 class="center-align" *ngIf="PartialDowloadDocuments.length==0 && !UpdateProgress">No Transcript Documents Available</h2>
+				<h2 class="center-align" *ngIf="PartialDowloadDocuments.length==0">No Transcript Documents Available</h2>
 			</div>
 		</md-card-content>
 	</md-card>
