--- a/src/app/leaves/leaves.component.html
+++ b/src/app/leaves/leaves.component.html
@@ -44,8 +44,8 @@
 
 	<md-card class="col-xs-12 col-sm-12 col-md-7 col-lg-8 mtb10 mlr10 p0 md-elevation-z12">
 		<md-card-content class="plr10 ptb5">
-			<h3>Applied Leaves  <button md-raised-button class="pull-right btn-small mright5" (click)="newLeave()"><span class="glyphicon glyphicon-plus text-success" style="padding: 2px 0 4px 2px;"></span></button></h3>
-			<table >
+			<h3>Applied Leaves <button md-raised-button class="pull-right btn-small mright5" (click)="newLeave()"><span class="glyphicon glyphicon-plus text-success" style="padding: 2px 0 4px 2px;"></span></button></h3>
+			<table>
 				<thead class="teal500">
 					<tr>
 						<th>From</th>
@@ -77,23 +77,17 @@
 					<div class="col-xs-12 p0 m0"><span>Leave Application</span> <button md-raised-button class="pull-right btn-small" (click)="NewLeaveModal=!NewLeaveModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
 				</md-toolbar>
 				<form #newDocForm="ngForm" (submit)="applyLeave()">
-
-					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
-						<p *ngIf="UpdateSuccess" class="alert alert-success">Leave Applied sucessfully!</p>
-						<p *ngIf="UpdateFailed" class="alert alert-danger">Leave Application failed please try again!</p>
-						<p *ngIf="UpdateProgress" class="alert alert-info">Please wait......</p>
-						<p *ngIf="Error.length>0" class="alert alert-danger"> {{Error}} </p>
-					</div>
 					<div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
 
-		 				<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
+						<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
 							<md-input class="" name="fromDate" placeholder="From Date" [(ngModel)]="NewLeave.FromDate" type="date" required></md-input>
 						</div>
 						<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
 							<md-input class="" name="toDate" placeholder="To Date" [(ngModel)]="NewLeave.ToDate" type="date" required></md-input>
 						</div>
 						<div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
-							<md-input class="" name="leaveType" placeholder="Leave Type" [(ngModel)]="NewLeave.LeaveType" [typeaheadMinLength]="0" [typeahead]="['Casual Leave','Privilege Leave','Special Leave']" type="text" required></md-input>
+							<md-input class="" name="leaveType" placeholder="Leave Type" [(ngModel)]="NewLeave.LeaveType" [typeaheadMinLength]="0" [typeahead]="['Casual Leave','Privilege Leave','Special Leave']"
+							 type="text" required></md-input>
 						</div>
 						<div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
 							<md-input class="" name="comments" placeholder="Comments" [(ngModel)]="NewLeave.Comments" type="text"></md-input>
