--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,25 +17,17 @@
             <img src="../../logo.png" alt="">
           </div>
 
-          <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10" *ngIf="error">
-            <p class="alert alert-danger">Please enter valid credentials!</p>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
+            <md-input class="" #username autocomplete="off" name="username" placeholder="Username/Email" [(ngModel)]="User.username" type="text" required ></md-input>
           </div>
 
           <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-            <md-input class="" autocomplete="off" name="username" placeholder="Username/Email" [(ngModel)]="User.username" type="text" required ></md-input>
+            <md-input class="" #password name="password" autocomplete="off" placeholder="Password" [(ngModel)]="User.password" type="password" required></md-input>
           </div>
 
-          <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtop10">
-            <md-input class="" name="password" autocomplete="off" placeholder="Password" [(ngModel)]="User.password" type="password" required></md-input>
-          </div>
-
-          <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align" *ngIf="!loading">
+          <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align">
             <button md-raised-button class="btn-save green500 btn-login" type="submit" value="Login">Login</button>
           </div>
-
-          <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop15 center-align" *ngIf="loading">
-             <button md-raised-button class="btn-save green500 btn-login" type="button" disabled><div class="loader-small"></div></button>
-             </div>
 
           <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 mtop10 center-align">
             <a (click)="navigateTo('forgot-password')" class="pointer">Forgot Password?</a>
