--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -23,7 +23,6 @@
         </div>
 
         <div class="col-lg-12 col-md-12 col-sm-12 mbottom5 ofs">
-          <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 alert alert-danger mbottom5" *ngIf="Error.length>0">{{error}}</div>
           <table>
             <thead>
               <tr table-header>
@@ -40,7 +39,7 @@
                 <td>{{patientList.Doctor}}</td>
                 <td>{{patientList.FromDate | date}}</td>
                 <td>{{patientList.ToDate | date}}</td>
-                <td style="width:94px"><a href="{{patientList.PatientListURL}}" download><button md-raised-button>Download</button></a></td>
+                <td style="width:94px"><a (click)="downloadFile(patientList.PatientListURL)" download><button md-raised-button>Download</button></a></td>
               </tr>
             </tbody>
           </table>
@@ -60,18 +59,12 @@
         <md-toolbar class="mbottom5 toolbar-small" color="primary">
           <div class="col-xs-12 p0 m0"><span>Patient List</span> <button md-raised-button class="pull-right btn-small" (click)="PatientListModal=!PatientListModal"><span class="glyphicon glyphicon-remove text-danger" style="padding: 2px 0 4px 2px;"></span></button></div>
         </md-toolbar>
-        <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
-          <p *ngIf="UpdateSuccess" class="alert alert-success">Patient List updated sucessfully!</p>
-          <p *ngIf="UpdateFailed" class="alert alert-danger">Patient List not updated!</p>
-          <p *ngIf="UpdateProgress" class="alert alert-info">Please wait while we upload the file</p>
-          <p *ngIf="ModalError.length>0" class="alert alert-danger">{{ModalError}}</p>
-        </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 mtb10 bg-white">
           <div class="row p0 m0">
             <form (submit)="postPatientList()" #myForm>
               <div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
                 <md-input class="" name="client" placeholder="Client" [(ngModel)]="SelectedPatientList.Client" type="text" [typeahead]="clients"
-                  required (typeaheadOnSelect)="clientChanged()"></md-input>
+                  required (blur)="clientChanged()" (typeaheadOnSelect)="clientChanged()"></md-input>
               </div>
 
               <div class="col-md-2 col-sm-6 col-lg-2 col-xs-12">
